--- a/src/components/Card/CardTitle/index.scss
+++ b/src/components/Card/CardTitle/index.scss
@@ -1,12 +1,10 @@
 @import '~scss/vars';
 
-.title{
-  padding-bottom: 12px;
-  line-height: 1.25;
-  font-size: $font16;
-  font-weight: bold;
-  color: $N500;
-  .more{
+.title {
+  @include title-font($font-size: 16px);
+  margin: 32px 0 12px;
+
+  .more {
     display: none;
     float: right;
     font-size: 12px;
@@ -14,7 +12,7 @@
     cursor: pointer;
     @include moreText();
   }
-  .show{
+  .show {
     display: inline-block;
   }
 }
