--- a/src/pages/AppDetail/Screenshots/index.scss
+++ b/src/pages/AppDetail/Screenshots/index.scss
@@ -2,7 +2,7 @@
 
 .screenshots {
   position: relative;
-  margin-bottom: 24px;
+  margin-bottom: 46px;
   font-size: 12px;
 
   .pre,
@@ -35,26 +35,27 @@
 
   .dotList {
     position: absolute;
-    bottom: -35px;
+    bottom: -8px;
     left: 0;
     width: 100%;
+    height: 2px;
     text-align: center;
     .dot {
       display: inline-block;
-      margin: 0 6px;
-      width: 44px;
-      height: 6px;
-      border-radius: 3px;
-      background-color: $grey;
+      margin: 0 4px;
+      width: 24px;
+      height: 2px;
+      background-color: $N30;
       cursor: pointer;
     }
     .active {
       background-color: $P75;
     }
   }
+
   .listOuter {
     position: relative;
-    margin: 0 36px 70px;
+    margin: 0 36px;
     height: $picture-height + $picture-margin*2;
     width:  $picture-width *2 + $picture-margin*5;
     overflow: hidden;
