--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -1,8 +1,7 @@
 @import "~scss/vars";
 
 .footer {
-  position: fixed;
-  bottom: 0;
+  position: absolute;
   width: 100%;
   //padding-top: $footer-padding-top;
 
