--- a/src/components/Base/Tooltip/index.scss
+++ b/src/components/Base/Tooltip/index.scss
@@ -15,7 +15,7 @@ $bgcolor: $text-color;
   cursor: pointer;
 
   &:hover {
-    box-shadow: 0 1px 3px 0 rgba(71, 78, 93, 0.07);
+    // box-shadow: 0 1px 3px 0 rgba(71, 78, 93, 0.07);
     //border: solid 1px $N30;
   }
   &:focus {
