--- a/src/pages/Dashboard/Runtimes/Detail/index.scss
+++ b/src/pages/Dashboard/Runtimes/Detail/index.scss
@@ -2,8 +2,8 @@
 
 .toolbar {
   display: inline-block;
-  position: relative;
-  margin-top: -20px;
+  position: absolute;
+  margin-top: -33px;
   cursor: pointer;
 
   .backTxt {
