--- a/src/pages/Dashboard/Runtimes/index.scss
+++ b/src/pages/Dashboard/Runtimes/index.scss
@@ -91,6 +91,8 @@ $card-height: 188px;
     }
     .popper {
       margin-bottom: 0;
+      border-radius: 2px;
+      background-color: $N500;
     }
   }
 
