--- a/src/components/Base/Tree/index.scss
+++ b/src/components/Base/Tree/index.scss
@@ -40,7 +40,7 @@
 .autoHeight {
   :global {
     li .rc-tree-node-content-wrapper {
-      height: auto;
+      height: auto !important;
     }
   }
 }
@@ -96,13 +96,13 @@
 .tree {
   :global {
     li span.rc-tree-checkbox {
-      background-image: none;
+      background-image: none !important;
       margin: 4px 4px 0 2px;
       position: relative;
       display: inline-block;
       vertical-align: middle;
-      width: auto;
-      height: auto;
+      width: auto !important;
+      height: auto !important;
     }
     .rc-tree-checkbox-checked {
       &:after {
