fix: Role page style

--- a/src/components/Base/Tree/index.scss
+++ b/src/components/Base/Tree/index.scss
@@ -37,10 +37,10 @@
   }
 }
 
-.autoHeight {
+.tree.autoHeight {
   :global {
     li .rc-tree-node-content-wrapper {
-      height: auto !important;
+      height: auto;
     }
   }
 }
@@ -95,14 +95,14 @@
 
 .tree {
   :global {
-    li span.rc-tree-checkbox {
-      background-image: none !important;
+    li.rc-tree-treenode-disabled span.rc-tree-checkbox {
+      background-image: none;
       margin: 4px 4px 0 2px;
       position: relative;
       display: inline-block;
       vertical-align: middle;
-      width: auto !important;
-      height: auto !important;
+      width: auto;
+      height: auto;
     }
     .rc-tree-checkbox-checked {
       &:after {
