--- a/src/pages/Dashboard/Apps/Audits/index.scss
+++ b/src/pages/Dashboard/Apps/Audits/index.scss
@@ -64,6 +64,17 @@
     border-bottom: 1px solid $N10;
     font-size: 12px;
 
+    &:first-child {
+      border-top: 1px solid $N10;
+      min-height: 32px;
+      line-height: 12px;
+      padding: 10px 24px;
+
+      &:hover, &.active {
+        background-color: $background-color;
+      }
+    }
+
     &:hover, &.active {
       background-color: $N0;
     }
@@ -91,8 +102,8 @@
   }
 
   .time {
-    width: 20%;
-    text-align: right;
+    width: 16%;
+    margin-left: 4%;
   }
 
   .hideReason {
