feat: Add server config

--- a/src/pages/Dashboard/NotificationServer/index.scss
+++ b/src/pages/Dashboard/NotificationServer/index.scss
@@ -85,4 +85,10 @@
   :global(.icon) {
     margin-right: 4px;
   }
+  .error {
+    position: static;
+    transform: translateY(0) scale(1);
+    background: $R30;
+    border-radius: 50%;
+  }
 }
