feat: ISV create role

--- a/src/portals/admin/pages/Roles/BindingActions/index.scss
+++ b/src/portals/admin/pages/Roles/BindingActions/index.scss
@@ -74,3 +74,12 @@
   display: inline-block;
   margin-left: 8px;
 }
+
+.dataLevel {
+  display: flex;
+  align-items: center;
+}
+.select {
+  margin-left: 5px;
+  width: 129px;
+}
