--- a/src/scss/partial/_icon.scss
+++ b/src/scss/partial/_icon.scss
@@ -3,8 +3,8 @@ $icon-size-config: 'mini' 16px, 'small' 24px, 'medium' 32px, 'large' 64px, 'ex-l
 
 $icon-button-border-radius: 3px;
 // todo
-$icon-button-active-background-color: #fff - 1;
-$icon-button-hover-background-color: #aaa - 1;
+$icon-button-active-background-color: darken(#fff, 1%);
+$icon-button-hover-background-color: darken(#aaa, 1%);
 $icon-button-disabled-opacity: .5;
 
 
