fix: User poral review issues

--- a/src/components/Base/Modal/index.scss
+++ b/src/components/Base/Modal/index.scss
@@ -8,7 +8,8 @@ $padding-left: 24px;
   max-height: 600px;
   margin: 0 auto;
   margin-top: 100px;
-  border-radius: 3px;
+  background-color: $N0;
+  box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
   background-color: $N0;
   outline: none;
   overflow: auto;
@@ -23,8 +24,6 @@ $padding-left: 24px;
     :global {
       .icon-close {
         position: absolute;
-        top: 32px;
-        right: 18px;
         cursor: pointer;
 
         &:hover svg{
