--- a/src/pages/Dashboard/Account/SSHKeys/index.scss
+++ b/src/pages/Dashboard/Account/SSHKeys/index.scss
@@ -180,8 +180,7 @@
 
   .operation {
     float: right;
-    margin-top: -6px;
-
+    font-weight: normal;
     :global {
       .icon-close {
         position: static;
@@ -209,15 +208,21 @@
     margin-right: 4px;
     margin-top: 2px;
   }
+
+  &:hover {
+    color: $P100;
+  }
 }
 
 .nullKeys {
-  margin-top: 16px;
   text-align: center;
-
+  padding: 24px 0;
+  border-radius: 2px;
+  box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
+  background-color: $N0;
   .word1 {
     @include title-font;
-    margin-top: 24px;
+    margin-top: 12px;
   }
 
   .word2 {
