refactor: Add isv create user

--- a/src/portals/isv/pages/Users/index.scss
+++ b/src/portals/isv/pages/Users/index.scss
@@ -3,3 +3,14 @@
 .floatRight {
   float: right;
 }
+
+.formItem {
+  @include form-item;
+}
+.formItemText {
+  @include form-textarea;
+}
+
+.formTitle {
+  margin-bottom: 20px;
+}
