--- a/src/components/MenuLayer/index.scss
+++ b/src/components/MenuLayer/index.scss
@@ -67,12 +67,21 @@
       .devIconOuter {
         display: inline-block;
         position: relative;
+        top: 2px;
         margin-left: 4px;
         width: 12px;
         height: 12px;
         border-radius: 50%;
         vertical-align: middle;
         background-color: $P75;
+
+        &.dev {
+          background-color: $G200;
+        }
+
+        &.isv {
+          background-color: $B200;
+        }
 
         .devIcon {
           position: absolute;
