--- a/src/components/Loading/index.scss
+++ b/src/components/Loading/index.scss
@@ -1,59 +1,6 @@
 @import "~scss/vars";
 
-%spinner-basic {
-  width:6em;
-  height:6em;
-}
-
 .loading {
-  position: relative;
-  top: $header-height;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 99;
-  background-color: transparent;
-
-  .loadOuter{
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    margin: -3em 0 0 -3em;
-
-    .loader {
-      border-radius:50%;
-      @extend %spinner-basic;
-
-      margin:60px auto;
-      font-size:10px;
-      position:relative;
-      text-indent:-9999em;
-      border-top:0.2em solid rgba($purple-light,0.2);
-      border-right:0.2em solid rgba($purple-light,0.2);
-      border-bottom:0.2em solid rgba($purple-light,0.2);
-      border-left:0.2em solid rgba($purple-light,1);
-
-      //-webkit-transform: translateZ(0);
-      //-ms-transform: translateZ(0);
-      transform: translateZ(0);
-
-      //-webkit-animation:load 1.1s infinite linear;
-
-      animation:load 1.1s infinite linear;
-    }
-  }
+  text-align: center;
+  margin-top: 40px;
 }
-
-@mixin load-frames() {
-  0% {
-    -webkit-transform:rotate(0deg);
-    transform:rotate(0deg);
-  }
-  100% {
-    -webkit-transform:rotate(360deg);
-    transform:rotate(360deg);
-  }
-}
-
-@-webkit-keyframes load {@include load-frames;}
-@keyframes load {@include load-frames;}
