refactor: ClundEnv page

--- a/src/pages/Dashboard/CloudEnv/index.scss
+++ b/src/pages/Dashboard/CloudEnv/index.scss
@@ -11,10 +11,14 @@
   &:hover {
     background: $N0;
   }
-
 }
 .disabled {
   opacity: 0.3;
+  .item {
+    width: auto;
+    height: auto;
+    text-align: left;
+  }
 }
 .itemName {
   flex: 1;
