--- a/src/pages/Dashboard/NotificationServer/index.scss
+++ b/src/pages/Dashboard/NotificationServer/index.scss
@@ -85,7 +85,7 @@
   :global(.icon) {
     margin-right: 4px;
   }
-  .error {
+  .failed {
     position: static;
     transform: translateY(0) scale(1);
     background: $R30;
